@@ -253,6 +253,9 @@ EXTRA_DIST = \
 	dbugarray3.awk \
 	dbugarray3.in \
 	dbugarray3.ok \
+	dbugarray4.awk \
+	dbugarray4.in \
+	dbugarray4.ok \
 	dbugeval.in \
 	dbugeval.ok \
 	dbugeval2.awk \
@@ -1583,7 +1586,7 @@ GAWK_EXT_TESTS = \
 	symtab11 symtab12 timeout typedregex1 typedregex2 typedregex3 \
 	typedregex4 typedregex5 typedregex6 typeof1 typeof2 typeof3 \
 	typeof4 typeof5 typeof6 unicode1 watchpoint1 \
-	re_test typeof7 typeof8 dbugarray1 dbugarray2 dbugarray3
+	re_test typeof7 typeof8 dbugarray1 dbugarray2 dbugarray3 dbugarray4
 
 ARRAYDEBUG_TESTS = arrdbg
 
@@ -1608,7 +1611,7 @@ SHLIB_TESTS = \
 
 # List of the tests which should be run with --debug option:
 NEED_DEBUG = dbugtypedre1 dbugtypedre2 dbugeval2 dbugeval3 dbugeval4 \
-	     dbugarray1 dbugarray2 dbugarray3
+	     dbugarray1 dbugarray2 dbugarray3 dbugarray4
 
 # List of the tests which should be run with --lint option:
 NEED_LINT = \
