@@ -1,0 +1,4 @@
+BEGIN {
+	a[1][1] = 1
+	a[1][2] = 2
+}
