@@ -1,0 +1,7 @@
+r
+watch a[1]
+r
+cont
+cont
+cont
+q
