@@ -1,7 +1,8 @@
 2023-12-24         Arnold D. Robbins     <arnold@skeeve.com>
 
-	* Makefile.am (EXTRA_DIST): New test: dbugarray3.
-	* dbugarray3.awk, dbugarray3.in, dbugarray3.ok: New files.
+	* Makefile.am (EXTRA_DIST): New tests: dbugarray3, dbugarray4.
+	* dbugarray3.awk, dbugarray3.in, dbugarray3.ok,
+	dbugarray4.awk, dbugarray4.in, dbugarray4.ok: New files.
 
 2023-12-21         Arnold D. Robbins     <arnold@skeeve.com>
 
