@@ -1,9 +1,15 @@
 2023-12-24         Arnold D. Robbins     <arnold@skeeve.com>
 
-	* debug.c pr (print_array): Use the subscript as the
+	* debug.c (print_array): Use the subscript as the
 	subarray name instead of the `vname' field. This field
 	is not there for arrays created with NUMINT subscripts.
 	Thanks again to Hermann Peifer for the report.
+
+	Unrelated:
+
+	* debug.c (find_subscript): Fail early on Node_var_new
+	and Node_elem_new.  Thanks yet again to Hermann Peifer
+	for the report.
 
 2023-12-21         Arnold D. Robbins     <arnold@skeeve.com>
 
